--- a/css/styles.css
+++ b/css/styles.css
@@ -16,24 +16,25 @@ body {
 }
 
 canvas {
-      border: 45px solid #ff0000;
+      border: 40px solid #ff0000;
       border-radius: 10px;
       display: block;
       margin: auto;
       width: 100%;
-      height: 600px;
+      height: 500px;
       background: #ffffff;
       box-shadow: 5px 5px 10px #999999, 5px 5px 10px inset #999999;
 }
 
 .canvas-container {
-    margin: 10px auto;
+    margin: 5px auto;
     width: 900px;
     /* text-align: center; */
 }
 
 .instructions {
     text-align: center;
+    margin-top: 0;
 }
 
 .interactions {
