--- a/css/styles.css
+++ b/css/styles.css
@@ -21,7 +21,7 @@ canvas {
       width: 100%;
       height: 500px;
       background: #ffffff;
-      box-shadow: 5px 5px 10px #999999, 5px 5px 10px inset #999999;
+      box-shadow: 5px 5px 10px #999999, 5px 5px 10px #999999 inset;
 }
 
 .canvas-container {
